fix print on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -187,7 +187,7 @@
   
   /* Position the print content - respect inline width/height */
   .print-content-wrapper {
-    position: fixed !important;
+    position: absolute !important;
     top: 0 !important;
     left: 0 !important;
     z-index: 99999 !important;
